--- a/src/components/NavBar/NavBar.component.css
+++ b/src/components/NavBar/NavBar.component.css
@@ -1,3 +1,14 @@
 .demo-layout-waterfall .mdl-layout__header-row .mdl-navigation__link:last-of-type  {
   padding-right: 0;
 }
+.app-shopping-cart {
+  margin: 0;
+  width: 60px;
+  height: 60px;
+  position: relative;
+}
+.app-shopping-cart .number {
+  position: absolute;
+  top: 14px;
+  right: 0;
+}
